Add Stripe OAuth connect action into settings

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -6,6 +6,7 @@
 // stylesheet order does not matter.
 // ==========================================================================
 
+@import 'components/action-card/style';
 @import 'components/button/style';
 @import 'components/button-group/style';
 @import 'components/card/style';
